--- a/index.html
+++ b/index.html
@@ -967,6 +967,12 @@
     .priority-urgent { border-left: 3px solid #ff6b6b !important; }
     .priority-someday { border-left: 3px solid #adb5bd !important; }
     
+    /* Task action buttons */
+    .task-action-btn.warning { background: #ffc107; color: #000; }
+    .task-action-btn.danger { background: #dc3545; color: white; }
+    .btn-danger { background: #dc3545 !important; color: white !important; }
+    .btn-danger:hover { background: #c82333 !important; }
+    
     /* Home Two Column Layout */
     .home-two-column {
       display: grid;
