--- a/index.html
+++ b/index.html
@@ -2641,6 +2641,19 @@
       max-height: 280px;
       overflow-y: auto;
     }
+    .sunnah-waktu-label {
+      font-size: 10px;
+      font-weight: 600;
+      color: var(--primary);
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      padding: 6px 8px 2px;
+      margin-top: 4px;
+      border-bottom: 1px solid var(--gray-200);
+    }
+    .sunnah-waktu-label:first-child {
+      margin-top: 0;
+    }
     .sunnah-mini-item {
       display: flex;
       align-items: center;
